feat: Connect AI Service and finish Dashboard UI